--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'Raleway';
 }
 
 .App-logo {
@@ -14,24 +15,68 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #B8896E;
+  font-size: 22px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 1rem;
+  flex-wrap: wrap;
 }
 
 .App-link {
   color: #61dafb;
 }
 
+.nav-bar {
+  display: flex;
+}
+
+.h1-header {
+  margin-left: 50px;
+  font-size: 60px;
+}
+
+.ul-header {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+li:not(:last-child) {
+  margin-right: 1rem;
+}
+
+a {
+  color: #000000;
+  text-decoration: none;
+  transition: color 0.2s ease;
+  padding: 1rem;
+  margin-right: 50px;
+  font-size: 40px;
+
+}
+
+a:hover {
+  color: #666;
+}
+
+#contact-tag {
+  width: 237px;
+  height: 68px;
+  left: 1158px;
+  top: 55px;
+
+  background: #D9D9D9;
+  border-radius: 23px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
