--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@
 .h1-header {
   margin-left: 50px;
   font-size: 60px;
+  
 }
 
 .ul-header {
@@ -42,10 +43,12 @@
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 li:not(:last-child) {
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
 
 a {
@@ -53,8 +56,8 @@ a {
   text-decoration: none;
   transition: color 0.2s ease;
   padding: 1rem;
-  margin-right: 50px;
   font-size: 40px;
+  margin-top: 20px;
 
 }
 
@@ -63,13 +66,17 @@ a:hover {
 }
 
 #contact-tag {
-  width: 237px;
-  height: 68px;
-  left: 1158px;
-  top: 55px;
+  width: 20%;
+  height: 20%;
+  left: 20%;
+  top: 20%;
 
   background: #D9D9D9;
   border-radius: 23px;
+}
+
+.li-header {
+  margin: 20px;
 }
 
 @keyframes App-logo-spin {
