--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,13 @@ li:not(:last-child) {
     transform: rotate(360deg);
   }
 }
+
+.card {
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  max-width: 500px;
+  padding: 20px;
+  
+}
