--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,6 @@
 
 .App-header {
   background-color: #B8896E;
-  font-size: 22px;
-  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
@@ -32,7 +30,14 @@
 .navbar {
   display: flex;
   justify-content: space-between;
+  font-size: 1.75rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   
+}
+
+.nav-link{
+  text-transform: uppercase;
 }
 
 .h1-header {
@@ -168,4 +173,28 @@ button[type="submit"]:hover {
 #initials{
   height: 150px;
   width: 150px;
+}
+
+.bg-main{
+  background-color: #B8896E ;
+}
+
+.text-gray{
+  color: rgba(0,0,0,.5);
+}
+
+.hero-area {
+  /* background-image: url('../src/components/images/BW.png'); */
+  background-size: cover;
+  background-position: center;
+}
+
+@media (max-width: 576px) {
+  .hero-area {
+      background-position: center;
+  }
+  
+  .text-gray {
+      font-size: 1.5rem;
+  }
 }
