--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
   font-size: 1.75rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  
+
 }
 
 .navbar.shrink {
@@ -44,21 +44,21 @@
   transition: padding-top 0.3s, padding-bottom 0.3s, padding-left 0.3s, padding-right 0.3s;
 }
 
-.nav-link{
+.nav-link {
   text-transform: uppercase;
 }
 
 .h1-header {
   margin-left: 50px;
   font-size: 60px;
-  
+
 }
 
-#welcome-text{
-  
-    display: flex;
-    font-size: 88px;
-    position: relative;
+#welcome-text {
+
+  display: flex;
+  font-size: 88px;
+  position: relative;
 }
 
 .ul-header {
@@ -103,8 +103,8 @@ li:not(:last-child) {
   margin: 20px;
 }
 
-.image{
-  max-width:500px;
+.image {
+  max-width: 420px;
   max-height: 500px;
   min-width: 300px;
   min-height: 300px;
@@ -127,7 +127,7 @@ li:not(:last-child) {
   margin: 20px auto;
   max-width: 500px;
   padding: 20px;
-  
+
 }
 
 .card-header {
@@ -185,15 +185,15 @@ button[type="submit"]:hover {
 }
 
 
-#initials{
+#initials {
   width: 150px;
 }
 
-.bg-main{
-  background-color: #B8896E ;
+.bg-main {
+  background-color: #B8896E;
 }
 
-.text-gray{
+.text-gray {
   color: antiquewhite
 }
 
@@ -205,33 +205,38 @@ button[type="submit"]:hover {
 
 @media (max-width: 576px) {
   .hero-area {
-      background-position: center;
+    background-position: center;
   }
-  
+
   .text-gray {
-      font-size: 1.5rem;
+    font-size: 1.5rem;
   }
- 
+
+  .image {
+    max-width: 100px;
+    max-height: 100px;
+  }
+
 }
 
 @media (max-width: 900px) {
-  #welcome-text{
+  #welcome-text {
     font-size: 60px;
   }
 }
 
 
-.navbar-nav{
+.navbar-nav {
   align-items: flex-end;
 }
 
-#contact-link{
+#contact-link {
   padding-right: 2rem;
 }
 
-.container{
+.container {
   position: relative;
-  z-index: 2; 
+  z-index: 2;
 }
 
 .plant-animation-left,
@@ -249,47 +254,81 @@ button[type="submit"]:hover {
 }
 
 .plant-animation-left {
-  left: 0; 
+  left: 0;
   height: 100%;
-  background-image: url('./components/images/plants-left.PNG'); 
+  background-image: url('./components/images/plants-left.PNG');
   animation: plantLeavesLeftGrow 5s ease-in-out forwards;
 }
 
 .plant-animation-right {
-  right: 0; 
+  right: 0;
   height: 100%;
-  background-image: url('./components/images/plants-right.PNG'); 
+  background-image: url('./components/images/plants-right.PNG');
   animation: plantLeavesRightGrow 5s ease-in-out forwards;
 }
 
 @keyframes plantLeavesLeftGrow {
   0% {
     opacity: 0;
-    transform: translateX(-100%); 
-}
-100% {
+    transform: translateX(-100%);
+  }
+
+  100% {
     opacity: 1;
     transform: translateX(0);
-}
+  }
 }
 
 @keyframes plantLeavesRightGrow {
   0% {
     opacity: 0;
-    transform: translateX(100%); 
-}
-100% {
+    transform: translateX(100%);
+  }
+
+  100% {
     opacity: 1;
     transform: translateX(0);
-}
+  }
 }
 
-.section{
+.plant-static-left,
+.plant-static-right {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.plant-static-left,
+.plant-static-right {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 7rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.plant-static-left {
+  left: 0;
+  background-image: url('./components/images/plants-left.PNG');
+}
+
+.plant-static-right {
+  right: 0;
+  background-image: url('./components/images/plants-right.PNG');
+}
+
+.section {
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-p{
+p {
   font-size: 20px;
 }
 
@@ -305,3 +344,6 @@ body {
   padding-top: 4.5rem;
 }
 
+.vh-50 {
+  height: 50vh;
+}
